--- a/templates/components/therapy-scheme.html.twig
+++ b/templates/components/therapy-scheme.html.twig
@@ -27,7 +27,7 @@
     <div class="row mt-3">
         {% if this.labelsRequest %}
         <p class="fw-lighter">
-            {{ 'app-therapy-report-requested-labels'|trans }}: <cite title="{{ this.labelsRequest }}">{{ this.labelsRequest.text }}</cite>
+            {{ 'app-therapy-report-requested-labels'|trans }}: <cite title="{{ this.labelsRequest }}">{{ this.labelsRequest }}</cite>
         </p>
         {% endif %}
     </div>
