--- a/templates/therapy/label/searchResult.html.twig
+++ b/templates/therapy/label/searchResult.html.twig
@@ -5,12 +5,15 @@
 <div class="container">
     <div class="row mb-3">
         <div class="col">
-            <h2>{{ 'app-therapy-labels-list-page-title'|trans }}</h2>
+            <h2>{{ 'app-results-for-label-search-title'|trans({'%label_name%': searchValue}) }}</h2>
+        </div>
+        <div class="col text-end">
+            <a href="{{ path('app_therapy_labels_list') }}" class="btn btn-outline-secondary">{{ 'app-reset-search-button'|trans }}</a>
         </div>
     </div>
     <form name="search_label" action="{{ path('app_therapy_labels_search_redirector') }}" method="post">
         <div class="input-group mb-3">
-            <input type="search" name="label_name" required="required" class="form-control form-control" aria-describedby="button-addon2">
+            <input type="search" name="label_name" required="required" class="form-control form-control" aria-describedby="button-addon2" value="{{ searchValue }}">
             <button class="btn btn-outline-secondary" type="submit" id="button-addon2">{{ 'app-search-for-label-button'|trans }}</button>
         </div>
     </form>
