--- a/templates/therapy/stub/searchResult.html.twig
+++ b/templates/therapy/stub/searchResult.html.twig
@@ -1,17 +1,19 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 	<div class="container mt-3">
 
 		<div class="row mb-3">
 			<div class="col">
-					<h2>{{ 'app-therapy-stubs-list-page-title'|trans }}</h2>
+					<h2>{{ 'app-results-for-label-search-title'|trans({'%label_name%': searchValue}) }}</h2>
+				</div>
+				<div class="col text-end">
+					<a href="{{ path('app_therapy_stubs_list') }}" class="btn btn-outline-secondary">{{ 'app-reset-search-button'|trans }}</a>
 			</div>
 		</div>
 		<form name="search_stub" action="{{ path('app_therapy_stubs_search_redirector') }}" method="post">
 			<div class="input-group mb-3">
-				<input type="search" name="searchName_stub" required="required" class="form-control form-control" aria-describedby="button-addon2">
+				<input type="search" name="searchName_stub" required="required" class="form-control form-control" aria-describedby="button-addon2" value="{{ searchValue }}">
 				<button class="btn btn-outline-secondary" type="submit" id="button-addon2">{{ 'app-search-for-therapy-button'|trans }}</button>
 			</div>
 		</form>
@@ -27,6 +29,12 @@
 					<p class="mt-2 text-black">{{ 'app-therapy-stubs-list-label-background'|trans }}</p>
 					<small>{{ stub.background }}</small>
 				</a>
+			</div>
+		{% else %}
+			<div class="list-group mb-3">
+					<div class="alert alert-secondary" role="alert">
+							<h5 class="mb-1">{{ 'app-no-results-message'|trans }}</h5>
+					</div>
 			</div>
 		{% endfor %}
 		<div class="row mb-3">
