--- a/templates/therapy/scheme/html-template.html.twig
+++ b/templates/therapy/scheme/html-template.html.twig
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}{{ 'app-project-title'|trans }}{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row mb-3">
-                <h2></h2>
-                <ul>
-                {% for label in data %}
-                    {% if label.id in targets|keys %}
-                        {% if not suppress_labels %}
-                        <li>
-                            <h5>{{ label.reportName }}</h5>
-                            <ul>
-                        {% endif %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}
+				{{ 'app-project-title'|trans }}
+			{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	</head>
+	<body>
+		<div class="container">
 
-                        {% for stub in label.stubs %}
-                            {% if stub.id in targets[label.id]|keys %}
-                            <li>
-                                <p class="text-black">
-                                    {% if not use_excerpt %}{{ stub.description }}{% else %}{{ stub.excerpt }}{% endif %}
-                                    {% if not (stub.description ends with '.') %}.{% endif %} 
-                                    {{- comments[label.id][stub.id]['comment'] -}}
-                                    {% if not (comments[label.id][stub.id]['comment'] ends with '.') and (comments[label.id][stub.id]['comment']|length > 0) %}.{% endif %}
-                                </p>
-                            </li>
-                            {% endif %}
-                        {% endfor %}
-                        {% if not suppress_labels %}</ul>
-                        </li>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-                </ul>
-            </div>
-        </div>
-    </body>
+			<div class="row mt-5">
+				<table class="table">
+					<thead>
+						<tr>
+							<th>
+								{{ 'app-therapy-report-table-title'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-name'|trans }}
+							</th>
+
+							{% if reportExcerpt == true %}
+								<th class="excerptItem">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem d-none">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% else %}
+								<th class="excerptItem d-none">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% endif %}
+
+							<th>
+								{{ 'app-therapy-report-table-background'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-comment'|trans }}
+							</th>
+						</tr>
+					</thead>
+          {{ reportContent|raw }}
+				</table>
+			</div>
+
+		</div>
+	</body>
 </html>
