--- a/templates/therapy/scheme/pdf-template.html.twig
+++ b/templates/therapy/scheme/pdf-template.html.twig
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}{{ 'app-project-title'|trans }}{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row mb-3">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">{{ 'app-therapy-report-table-name'|trans }}</th>
-                        <th scope="col">
-                        {% if use_excerpt == 'on' %}
-                            {{ 'app-therapy-report-table-excerpt'|trans }}
-                        {% else %}
-                            {{ 'app-therapy-report-table-description'|trans }}
-                        {% endif %}
-                        </th>
-                        <th scope="col">{{ 'app-therapy-report-table-background'|trans }}</th>
-                        <th scope="col">{{ 'app-therapy-report-table-comment'|trans }}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for label in data %}
-                        {% if label.id in targets|keys %}
-                            {% if not suppress_labels %}
-                            <tr class="table-light">
-                                <th scope="row" colspan="5">
-                                    {{ 'app-therapy-report-table-title'|trans }}: {{ label.reportName }}
-                                </th>
-                            </tr>
-                            {% endif %}
-                            {% for stub in label.stubs %}
-                                {% if stub.id in targets[label.id]|keys %}
-                                <tr>
-                                    <td class="col-1 border-start">{{ stub.name }}</td>
-                                    <td class="col-3 border-start">{{ use_excerpt == 'on' ? stub.excerpt : stub.description }}</td>
-                                    <td class="col-3 border-start">{{ stub.background }}</td>
-                                    <td class="border-start">
-                                        <span>{{ comments[label.id][stub.id]['comment'] }}</span>
-                                    </td>
-                                </tr>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}
+				{{ 'app-project-title'|trans }}
+			{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	</head>
+	<body>
+		<div class="container">
+
+			<div class="row mt-5">
+				<table class="table">
+					<thead>
+						<tr>
+							<th>
+								{{ 'app-therapy-report-table-title'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-name'|trans }}
+							</th>
+
+							{% if reportExcerpt == true %}
+								<th class="excerptItem">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem d-none">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% else %}
+								<th class="excerptItem d-none">
+									{{ 'app-therapy-report-table-excerpt'|trans }}
+								</th>
+								<th class="descriptionItem">
+									{{ 'app-therapy-report-table-description'|trans }}
+								</th>
+							{% endif %}
+
+							<th>
+								{{ 'app-therapy-report-table-background'|trans }}
+							</th>
+							<th>
+								{{ 'app-therapy-report-table-comment'|trans }}
+							</th>
+						</tr>
+					</thead>
+              {{ reportContent|raw }}
+				</table>
+			</div>
+
+		</div>
+	</body>
 </html>
