fix/issue-18-24 - SaveAsTemplate + Edit Template

--- a/templates/therapy/scheme/searchResult.html.twig
+++ b/templates/therapy/scheme/searchResult.html.twig
@@ -32,7 +32,7 @@
 							<tr class="table-light">
 								<td>{{ template.name }}</td>
 								<td>
-									<a href="{{ path('app_therapy_scheme_load', {'id': template.id}) }}" class="btn btn-info">{{ 'app-therapy-report-saved-template-load'|trans }}</a>
+									<a href="{{ path('app_therapy_scheme_edit', {'id': template.id}) }}" class="btn btn-info">{{ 'app-therapy-report-saved-template-edit'|trans }}</a>
 									<a href="{{ path('app_therapy_scheme_delete', {'templateId': template.id}) }}" class="btn btn-danger">{{ 'app-therapy-report-saved-template-delete'|trans }}</a>
 								</td>
 							</tr>
