--- a/templates/therapy/scheme/save-as-template.html.twig
+++ b/templates/therapy/scheme/save-as-template.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
 <div class="container">
-    {{ component('scheme-template', {
-        scheme: scheme.id ? scheme : null,
-        targets: targets,
-        comments: comments,
-        form: form
-    }) }}
+    <h2 class="mt-3">
+        {% if isEditing %}
+            {{ 'app-update-therapy-scheme-template-title'|trans }}
+        {% else %}
+            {{ 'app-new-therapy-save-scheme-template'|trans }}
+        {% endif %}
+    </h2>
+
+    {{ form_start(form) }}
+        {{ form_row(form.name) }}
+
+        <button class="btn btn-primary flex-fill">{{ 'app-save-button'|trans }}</button>
+    {{ form_end(form) }}
 </div>
 {% endblock %}
