fix/issue-22 - Added Basic Formatting in Textfields

--- a/templates/therapy/stub/list.html.twig
+++ b/templates/therapy/stub/list.html.twig
@@ -19,13 +19,13 @@
 			<div class="list-group mb-3">
 				<a href="{{ path('app_therapy_stub_edit', {id: stub.id}) }}" class="list-group-item list-group-item-action" aria-current="true">
 					<div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1">{{ stub.name }}</h5>
+						<h5 class="mb-1">{{ stub.name|raw }}</h5>
 						<small>{{ stub.createdAt|format_datetime(locale=app.request.locale) }}</small>
 					</div>
 					<p class="mt-2 text-black">{{ 'app-therapy-stubs-list-label-description'|trans }}</p>
-					<small>{{ stub.description }}</small>
+					<small>{{ stub.description|raw }}</small>
 					<p class="mt-2 text-black">{{ 'app-therapy-stubs-list-label-background'|trans }}</p>
-					<small>{{ stub.background }}</small>
+					<small>{{ stub.background|raw }}</small>
 				</a>
 			</div>
 		{% endfor %}
