--- a/templates/therapy/scheme/pdf-template.html.twig
+++ b/templates/therapy/scheme/pdf-template.html.twig
@@ -8,46 +8,23 @@
 			{% endblock %}
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		<style>
+			table {
+				width: 100%;
+				border-collapse: collapse;
+				border: none;
+			}
+			table, th, td {
+				border: none;
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container">
 
 			<div class="row mt-5">
 				<table class="table">
-					<thead>
-						<tr>
-							<th>
-								{{ 'app-therapy-report-table-title'|trans }}
-							</th>
-							<th>
-								{{ 'app-therapy-report-table-name'|trans }}
-							</th>
-
-							{% if reportExcerpt == true %}
-								<th class="excerptItem">
-									{{ 'app-therapy-report-table-excerpt'|trans }}
-								</th>
-								<th class="descriptionItem d-none">
-									{{ 'app-therapy-report-table-description'|trans }}
-								</th>
-							{% else %}
-								<th class="excerptItem d-none">
-									{{ 'app-therapy-report-table-excerpt'|trans }}
-								</th>
-								<th class="descriptionItem">
-									{{ 'app-therapy-report-table-description'|trans }}
-								</th>
-							{% endif %}
-
-							<th>
-								{{ 'app-therapy-report-table-background'|trans }}
-							</th>
-							<th>
-								{{ 'app-therapy-report-table-comment'|trans }}
-							</th>
-						</tr>
-					</thead>
-              {{ reportContent|raw }}
+					{{ reportContent|raw }}
 				</table>
 			</div>
 
