--- a/templates/therapy/scheme/create.html.twig
+++ b/templates/therapy/scheme/create.html.twig
@@ -19,6 +19,9 @@
 
 			<div id="contentDisplayedWhenLabelsAreSelected" class="d-none">
 				<div class="row mt-3">
+                    <div class="form-check form-switch col-2 m-3">
+						{{ form_widget(form.selectAll) }}
+					</div>
 					<div class="form-check form-switch col-3 m-3">
 						{{ form_widget(form.suppress) }}
 					</div>
@@ -204,6 +207,11 @@ const generateReport = async (selectedLabels, currentComments, notCheckedCheckbo
 
 {# ! Setting labels for the checkboxes #}
 $(document).ready(function () {
+
+    const selectAllSwitch = document.getElementById("therapy_scheme_selectAll");
+    const selectAllSwitchLabel = selectAllSwitch?.parentElement?.querySelector("label");
+    selectAllSwitchLabel.innerText = "{{ 'app-therapy-report-select-all'|trans }}";
+
     const suppressLabelsSwitch = document.getElementById("therapy_scheme_suppress");
     const suppressLabelsSwitchLabel = suppressLabelsSwitch?.parentElement?.querySelector("label");
     suppressLabelsSwitchLabel.innerText = "{{ 'app-therapy-report-suppress-labels'|trans }}";
@@ -228,6 +236,22 @@ $(document).ready(function () {
 
     {# * Resetting the textareas #}
     $("textarea").val("");
+});
+
+{# * Use select all Switch #}
+$(document).ready(function () {
+	const selectAllSwitch = document.getElementById("therapy_scheme_selectAll");
+	selectAllSwitch?.addEventListener("change", function (event) {
+        const checkboxes = document.querySelectorAll("input[name^='targets|labelID=']");
+        checkboxes.forEach((checkbox) => {
+
+            if (event.target.checked) {
+                checkbox.checked = 'checked';
+            } else {
+                checkbox.checked = '';
+            }
+        });
+	});
 });
 
 {# * Use excerpt Switch #}
