--- a/templates/therapy/scheme/edit.html.twig
+++ b/templates/therapy/scheme/edit.html.twig
@@ -27,6 +27,9 @@
 
 		<div id="contentDisplayedWhenLabelsAreSelected" class="d-none">
 			<div class="row mt-3">
+				<div class="form-check form-switch col-2 m-3">
+					{{ form_widget(form.selectAll) }}
+				</div>
 				<div class="form-check form-switch col-3 m-3">
 					{{ form_widget(form.suppress) }}
 				</div>
@@ -233,6 +236,11 @@
 
 	// * Setting labels for the checkboxes
 	$(document).ready(function () {
+
+		    const selectAllSwitch = document.getElementById("edit_therapy_scheme_selectAll");
+    		const selectAllSwitchLabel = selectAllSwitch?.parentElement?.querySelector("label");
+    		selectAllSwitchLabel.innerText = "{{ 'app-therapy-report-select-all'|trans }}";
+
 			const suppressLabelsSwitch = document.getElementById("edit_therapy_scheme_suppress");
 			const suppressLabelsSwitchLabel = suppressLabelsSwitch?.parentElement?.querySelector("label");
 			suppressLabelsSwitchLabel.innerText = "{{ 'app-therapy-report-suppress-labels'|trans }}";
@@ -272,6 +280,23 @@
 		} else {
 			suppressLabelsSwitch.checked = false;
 		}
+	});
+
+
+	{# * Use select all Switch #}
+	$(document).ready(function () {
+		const selectAllSwitch = document.getElementById("edit_therapy_scheme_selectAll");
+		selectAllSwitch?.addEventListener("change", function (event) {
+			const checkboxes = document.querySelectorAll("input[name^='targets|labelID=']");
+			checkboxes.forEach((checkbox) => {
+
+				if (event.target.checked) {
+					checkbox.checked = 'checked';
+				} else {
+					checkbox.checked = '';
+				}
+			});
+		});
 	});
 
 	// * Use excerpt Switch
