--- a/templates/therapy/label/edit.html.twig
+++ b/templates/therapy/label/edit.html.twig
@@ -22,6 +22,14 @@
                 {{ form_widget(labelForm.delete) }}
                 </div>
             </div>
+            <div class="mb-3">
+                    <h3>{{ 'app-therapy-stubs-list-page-title'|trans }}</h3>
+                    <ul>
+                        {% for stub in stubs %}
+                            <li>{{ stub.name }}</li>
+                        {% endfor %}
+                    </ul>
+            </div>
         </div>
     {{ form_end(labelForm) }}
 </div>
