--- a/templates/therapy/stub/searchResult.html.twig
+++ b/templates/therapy/stub/searchResult.html.twig
@@ -14,13 +14,13 @@
 						<input type="search" name="searchName_stub" required="required" class="form-control" aria-describedby="button-addon2" value="{{ searchValue }}">
 					</div>
 					<div class="col-md-2">
-						<select id="searchCriteria" name="searchCriteria" class="form-select" value="{{ searchCriteria }}>
-							<option value="All">All</option>
-							<option value="Name">Name</option>
-							<option value="Description">Description</option>
-							<option value="Excerpt">Excerpt</option>
-							<option value="Background">Background</option>
-						</select>
+                        <select id="searchCriteria" name="searchCriteria" class="form-select">
+                            <option value="All" {{ searchCriteria == 'all' ? 'selected' : '' }}>All</option>
+                            <option value="Name" {{ searchCriteria == 'name' ? 'selected' : '' }}>Name</option>
+                            <option value="Description" {{ searchCriteria == 'description' ? 'selected' : '' }}>Description</option>
+                            <option value="Excerpt" {{ searchCriteria == 'excerpt' ? 'selected' : '' }}>Excerpt</option>
+                            <option value="Background" {{ searchCriteria == 'background' ? 'selected' : '' }}>Background</option>
+                        </select>
 					</div>
 					<div class="col-md-2">
 						<button class="btn btn-outline-secondary" type="submit" id="button-addon2">{{ 'app-search-for-therapy-button'|trans }}</button>
