--- a/templates/therapy/stub/list.html.twig
+++ b/templates/therapy/stub/list.html.twig
@@ -36,11 +36,41 @@
         <table id="stubsTable" class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Excerpt</th>
-                    <th>Background</th>
+                    <th>
+                        <a href="{{ path('app_therapy_stubs_list', {'sort': 'id', 'direction': (sort == 'id' and direction == 'asc') ? 'desc' : 'asc'}) }}" style="display: flex; align-items: center;">
+                            ID{% if sort is defined and sort == 'id' %}
+                                <span style="margin-left: 0.2em;">{% if direction == 'asc' %} &#9650; {% else %} &#9660; {% endif %}</span>
+                            {% endif %}
+                        </a>
+                    </th>                  
+                    <th>
+                        <a href="{{ path('app_therapy_stubs_list', {'sort': 'name', 'direction': (sort == 'name' and direction == 'asc') ? 'desc' : 'asc'}) }}">
+                            Name {% if sort is defined and sort == 'name' %} 
+                                {% if direction == 'asc' %} &#9650; {% else %} &#9660; {% endif %} 
+                            {% endif %}
+                        </a>
+                    </th>
+                    <th>
+                        <a href="{{ path('app_therapy_stubs_list', {'sort': 'description', 'direction': (sort == 'description' and direction == 'asc') ? 'desc' : 'asc'}) }}">
+                            Description {% if sort is defined and sort == 'description' %} 
+                                {% if direction == 'asc' %} &#9650; {% else %} &#9660; {% endif %} 
+                            {% endif %}
+                        </a>
+                    </th>      
+                    <th>
+                        <a href="{{ path('app_therapy_stubs_list', {'sort': 'excerpt', 'direction': (sort == 'excerpt' and direction == 'asc') ? 'desc' : 'asc'}) }}">
+                            Excerpt {% if sort is defined and sort == 'excerpt' %} 
+                                {% if direction == 'asc' %} &#9650; {% else %} &#9660; {% endif %} 
+                            {% endif %}
+                        </a>
+                    </th>              
+                    <th>
+                        <a href="{{ path('app_therapy_stubs_list', {'sort': 'background', 'direction': (sort == 'background' and direction == 'asc') ? 'desc' : 'asc'}) }}">
+                            Background {% if sort is defined and sort == 'background' %} 
+                                {% if direction == 'asc' %} &#9650; {% else %} &#9660; {% endif %} 
+                            {% endif %}
+                        </a>
+                    </th>                                               
                     <th>Edit</th>
                 </tr>
             </thead>
